UHF-4235: Applied consent checkbox for Link target field widgets.

--- a/modules/hdbt_admin_editorial/translations/fi.po
+++ b/modules/hdbt_admin_editorial/translations/fi.po
@@ -58,14 +58,14 @@ msgstr "Ajastettu piilottaminen"
 msgid "Basic tags"
 msgstr "Perustägit"
 
-msgid "I confirm that the link meets the accessibility requirements."
-msgstr "Vahvistan, että linkki täyttää saavutettavuusvaatimukset."
+msgid "The link meets the accessibility requirements"
+msgstr "Linkki täyttää saavutettavuusvaatimukset"
 
 msgid ""
 "I have made sure that the description "
-"of this link clearly states that it will open in a new window. "
-"<a href=\"@wcag-techniques\">See WCAG 3.2.5 accessibility requirement.</a>"
+"of this link clearly states that it will open in a new tab. "
+"<a href=\"@wcag-techniques\" target=\"_blank\">See WCAG 3.2.5 accessibility requirement (the link opens in a new tab).</a>"
 msgstr ""
 "Olen huolehtinut, että tämän linkin kuvauksessa "
-"kerrotaan selkeästi sen aukeavan uuteen ikkunaan. "
-"<a href=\"@wcag-techniques\">Katso WCAG 3.2.5 saavutettavuusvaatimukset.</a>"
+"kerrotaan selkeästi sen aukeavan uuteen välilehteen. "
+"<a href=\"@wcag-techniques\" target=\"_blank\">Katso WCAG 3.2.5 saavutettavuusvaatimukset (linkki avautuu uuteen välilehteen).</a>"
