UHF-3884: Added translations for 'Hide sidebar navigation from this page' field.

--- a/modules/hdbt_admin_editorial/translations/fi.po
+++ b/modules/hdbt_admin_editorial/translations/fi.po
@@ -80,6 +80,9 @@ msgctxt "HDBT Admin editorial"
 msgid "Version notes"
 msgstr "Miten muutit sivua?"
 
+msgid "Hide sidebar navigation from this page"
+msgstr "Piilota sivupalkin navigaatio tältä sivulta"
+
 msgid ""
 "I have made sure that the description "
 "of this link clearly states that it will open in a new tab. "
