UHF-6006: Created a form for administrator to create one-time login links for Drupal users.

--- a/modules/hdbt_admin_editorial/translations/sv.po
+++ b/modules/hdbt_admin_editorial/translations/sv.po
@@ -7,3 +7,23 @@ msgstr "Hur ändrade du sidan?"
 
 msgid "Hide sidebar navigation from this page"
 msgstr "Dölj sidofältsnavigering från den här sidan"
+
+msgctxt "HDBT Admin editorial - One-time login link"
+msgid "Click the button below to generate a one-time login link for <strong>%user_name</strong>."
+msgstr "Klicka på knappen nedan för att skapa en engångsinloggningslänk för <strong>%user_name</strong>."
+
+msgctxt "HDBT Admin editorial - One-time login link"
+msgid "Generate the URL"
+msgstr "Skapa URL:en"
+
+msgctxt "HDBT Admin editorial - One-time login link"
+msgid "One-time login link for %user_name"
+msgstr "Engångsinloggningslänk för %user_name"
+
+msgctxt "HDBT Admin editorial - One-time login link"
+msgid "This link is valid for %hr. Do not visit the URL yourself as it will invalidate the login link."
+msgstr "Denna länk är giltig i %hr. Besök inte webbadressen själv eftersom det kommer att ogiltigförklara inloggningslänken."
+
+msgctxt "HDBT Admin editorial - One-time login link"
+msgid "Update user password"
+msgstr "Uppdatera användarlösenord"
