--- a/modules/hdbt_admin_editorial/translations/fi.po
+++ b/modules/hdbt_admin_editorial/translations/fi.po
@@ -100,3 +100,23 @@ msgstr "Avaa uudessa ikkunassa / välilehdellä"
 
 msgid "The link meets the accessibility requirements"
 msgstr "Linkki täyttää saavutettavuusvaatimukset"
+
+msgctxt "HDBT Admin editorial - One-time login link"
+msgid "Click the button below to generate a one-time login link for <strong>%user_name</strong>."
+msgstr "Klikkaa alla olevaa painiketta luodaksesi kertakäyttöisen kirjautumislinkin käyttäjälle <strong>%user_name</strong>."
+
+msgctxt "HDBT Admin editorial - One-time login link"
+msgid "Generate the URL"
+msgstr "Generoi URL-osoite"
+
+msgctxt "HDBT Admin editorial - One-time login link"
+msgid "One-time login link for %user_name"
+msgstr "Kertakäyttöinen kirjautumislinkki käyttäjälle %user_name"
+
+msgctxt "HDBT Admin editorial - One-time login link"
+msgid "This link is valid for %hr. Do not visit the URL yourself as it will invalidate the login link."
+msgstr "Tämä linkki on voimassa %hr. Älä käy URL-osoitteessa itse, sillä se mitätöi kirjautumislinkin."
+
+msgctxt "HDBT Admin editorial - One-time login link"
+msgid "Update user password"
+msgstr "Päivitä käyttäjän salasana"
