--- a/modules/hdbt_admin_editorial/translations/fi.po
+++ b/modules/hdbt_admin_editorial/translations/fi.po
@@ -102,16 +102,24 @@ msgid "The link meets the accessibility requirements"
 msgstr "Linkki täyttää saavutettavuusvaatimukset"
 
 msgctxt "HDBT Admin editorial - One-time login link"
+msgid "One-time login link for %user_name"
+msgstr "Kertakäyttöinen kirjautumislinkki käyttäjälle %user_name"
+
+msgctxt "HDBT Admin editorial - One-time login link"
+msgid "<strong>Do not send the one time link via MS Teams</strong> or any other instant messaging application!<br />Doing so will invalidate the login link, and it will become useless."
+msgstr "<strong>Älä lähetä kertakäyttöistä linkkiä MS Teamsin kautta</strong> tai minkään muun pikaviestisovelluksen kautta!<br />Pikaviestimet lataavat URL-osoitteen esikatseluun ja tämä toimenpide mitätöi kirjautumislinkin."
+
+msgctxt "HDBT Admin editorial - One-time login link"
+msgid "Copy and send the one-time login link to the user via <strong>email</strong>."
+msgstr "Kopioi Kertakäyttöinen kirjautumislinkki ja lähetä se käyttäjälle <strong>sähköpostitse</strong>"
+
+msgctxt "HDBT Admin editorial - One-time login link"
 msgid "Click the button below to generate a one-time login link for <strong>%user_name</strong>."
 msgstr "Klikkaa alla olevaa painiketta luodaksesi kertakäyttöisen kirjautumislinkin käyttäjälle <strong>%user_name</strong>."
 
 msgctxt "HDBT Admin editorial - One-time login link"
 msgid "Generate the URL"
 msgstr "Generoi URL-osoite"
-
-msgctxt "HDBT Admin editorial - One-time login link"
-msgid "One-time login link for %user_name"
-msgstr "Kertakäyttöinen kirjautumislinkki käyttäjälle %user_name"
 
 msgctxt "HDBT Admin editorial - One-time login link"
 msgid "This link is valid for %hr. Do not visit the URL yourself as it will invalidate the login link."
