Added template for the media entity when using the media library.

--- a/translations/fi.po
+++ b/translations/fi.po
@@ -5,6 +5,14 @@ msgctxt "Accent color"
 msgid "Accent"
 msgstr "Korosteväri"
 
+msgctxt "Alt text in media library"
+msgid "Alt text"
+msgstr "Alt-teksti"
+
+msgctxt "Empty alt text in media library"
+msgid "Empty"
+msgstr "Tyhjä"
+
 msgid "Basic motif"
 msgstr "Perus"
 
