--- a/translations/sv.po
+++ b/translations/sv.po
@@ -6,16 +6,16 @@ msgid "Characters: @counted/@total"
 msgstr "Tecken: @counted/@total"
 
 msgctxt "Character counter"
-msgid "The recommended maximum length for the title is 50 characters."
-msgstr "Rekommenderad maxlängd för titeln är 50 tecken."
+msgid "The recommended maximum length for the title is @total characters."
+msgstr "Rekommenderad maxlängd för titeln är @total tecken."
 
 msgctxt "Character counter"
-msgid "Consider shortening. A lead under 160 characters works best for search engines."
-msgstr "Överväg att förkorta. En ingress under 160 tecken fungerar bäst för sökmotorer."
+msgid "Consider shortening. A lead under @step characters works best for search engines."
+msgstr "Överväg att förkorta. En ingress under @step tecken fungerar bäst för sökmotorer."
 
 msgctxt "Character counter"
-msgid "The recommended maximum length for the lead is 200 characters."
-msgstr "Rekommenderad maxlängd för ingressen är 200 tecken."
+msgid "The recommended maximum length for the lead is @total characters."
+msgstr "Rekommenderad maxlängd för ingressen är @total tecken."
 
 msgctxt "Empty alt text in media library"
 msgid "Empty"
