UHF-9088: Added a context to the menu link parent and weight field labels and translated the labels.

--- a/translations/fi.po
+++ b/translations/fi.po
@@ -95,6 +95,14 @@ msgctxt "HELfi Metatags"
 msgid "Description"
 msgstr "Metakuvaus"
 
+msgctxt "Menu link translations"
+msgid "Parent link"
+msgstr "Yläsivu"
+
+msgctxt "Menu link translations"
+msgid "Weight"
+msgstr "Järjestys"
+
 msgid "Main menu"
 msgstr "Päävalikko"
 
