--- a/translations/fi.po
+++ b/translations/fi.po
@@ -114,7 +114,6 @@ msgstr ""
 "valita lohkon kielen sivun oikeassa ylälaidassa olevasta "
 "kielivalinnasta."
 
-
 msgid "Published on"
 msgstr "Julkaisuaika"
 
@@ -124,6 +123,14 @@ msgstr "Pääväri"
 
 msgid "Pulse"
 msgstr "Pulssi"
+
+msgctxt "Redirect translations"
+msgid "Path"
+msgstr "Lähtöosoite"
+
+msgctxt "Redirect translations"
+msgid "To"
+msgstr "Kohdeosoite"
 
 msgid "Regenerate all sitemaps after hitting <em>Save</em>"
 msgstr "Luo uudelleen kaikki sivustokartat kun sisältö tallennetaan"
